# study-os-thesis

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  REFACTORING_STATE.md  TEST_PLAN.md  debug.sh  docker-compose.yml  package-lock.json  package.json
.github/workflows/: qa.yml
backend/: .env.example  alembic.ini  log_config.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_hnsw_embedding_index.py  0003_fulltext_search.py  0004_chairs_students.py  0005_drop_transcript_raw.py  0006_resize_embeddings_2560.py  0007_proposal_fields.py  0008_drop_professor_role.py  0009_add_jobs_table.py
backend/app/: config.py  db.py  dependencies.py  exceptions.py  main.py
backend/app/admin/: controller.py  deps.py  service.py
backend/app/api/: admin.py  auth.py  chat.py  proposals.py  theses.py
backend/app/auth/: controller.py  deps.py  schemas.py  security.py  service.py
backend/app/auth_core/: security.py
backend/app/chairs/: controller.py  deps.py  repository.py  schemas.py  service.py  tasks.py
backend/app/chat/: controller.py  deps.py  repository.py  schemas.py  service.py  tasks.py
backend/app/jobs/: controller.py  deps.py  repository.py  schemas.py  service.py
backend/app/llm/: agent.py  embeddings.py  factory.py  litellm_adapter.py  ollama_client.py  port.py
backend/app/models/: __init__.py  chair.py  chat.py  job.py  student.py  thesis.py  user.py
backend/app/proposals/: controller.py  deps.py  service.py
backend/app/repositories/: __init__.py  chat_repository.py  thesis_repository.py  user_repository.py
backend/app/schemas/: chat.py  thesis.py  user.py
backend/app/services/: __init__.py  admin_service.py  auth_service.py  chat_service.py  student_service.py  thesis_service.py
backend/app/students/: controller.py  deps.py  pdf_store.py  repository.py  schemas.py  service.py  tasks.py
backend/app/theses/: controller.py  deps.py  repository.py  schemas.py  service.py  tasks.py
backend/app/tools/: search_theses.py
backend/app/users/: repository.py
backend/app/worker/: celery_app.py  celery_config.py  job_status.py  publisher.py  task_runner.py  utils.py
backend/app/ws/: controller.py  listener.py  manager.py
backend/docs/: agent_architecture.md
backend/scripts/: check_ollama.py  check_search.py  seed.py  seed_admin.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_chair_endpoints.py  test_chat_endpoints.py  test_health.py  test_job_endpoints.py  test_student_endpoints.py  test_thesis_endpoints.py  test_ws_endpoints.py
backend/tests/unit/: conftest.py  test_auth_service.py  test_chair_service.py  test_chat_service.py  test_compute_gpa.py  test_student_service.py  test_thesis_service.py
backend/tests/unit/jobs/: test_job_schemas.py  test_job_service.py
backend/tests/unit/worker/: test_celery_config.py  test_chair_tasks.py  test_chat_tasks.py  test_publisher.py  test_retry_policy.py  test_run_async.py  test_student_tasks.py  test_task_runner.py  test_thesis_tasks.py
backend/tests/unit/ws/: test_connection_manager.py  test_listener.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  theses.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AiInsightChip.tsx  AiInsightSnippet.tsx  AppShell.tsx  ErrorBoundary.tsx  PaperCard.tsx  SideNav.tsx  SkillBar.tsx  SkillRadar.tsx  StatCard.tsx  TopBar.tsx
frontend/src/pages/: Admin.tsx  ChairExplorer.tsx  Chat.tsx  Dashboard.tsx  Login.tsx  NotFound.tsx  Proposals.tsx  Register.tsx  SubmitThesis.tsx
