[project]
name = "study-os-thesis-backend"
version = "0.1.0"
description = "FastAPI backend for the thesis recommendation app"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "passlib>=1.7",
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "email-validator>=2.2",
    "pyjwt>=2.12.1",
    "slowapi>=0.1.9",
    "pdfplumber>=0.11",
    "litellm==1.86.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 180
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod,
    "ANN204", # Return types __init__
    "E501",   # Line too long
    "I001",   # Imports are incorrectly sorted.
]

[tool.ruff.lint.per-file-ignores]
# Ignoriere F401 (Unused import) in ALLEN __init__.py Dateien (egal in welchem Ordner)
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
